Add filters for beer catalogue (in progress)

--- a/src/components/Beers/style.scss
+++ b/src/components/Beers/style.scss
@@ -25,3 +25,8 @@
 .beer-detail-image {
   height: 300px;
 }
+
+.site-drawer-render-in-current-wrapper {
+  overflow: hidden;
+  position: relative;
+}
