--- a/src/components/Beers/style.scss
+++ b/src/components/Beers/style.scss
@@ -19,9 +19,18 @@
 .beer-image {
   background-size: cover;
   background-position: center;
-  height: 200px;
+  height: 150px;
+  box-shadow: 0 10px 6px -6px #777;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  width: 50%;
 }
 
 .beer-detail-image {
   height: 300px;
+}
+
+.beer-image-container {
+ width: 200px;
 }
