--- a/src/components/Beers/style.scss
+++ b/src/components/Beers/style.scss
@@ -1,7 +1,8 @@
 @import "./../../variables.scss";
 
+
 .beers-header {
-  background-color: $secondary-background !important; 
+  background-color: $secondary-background !important;
   padding: 10px 10px 0px 10px !important;
   margin: 0px !important;
   border-bottom: 1px solid rgb(242, 242, 242);
@@ -24,4 +25,15 @@
 
 .beer-detail-image {
   height: 300px;
+  width: 200px;
+}
+
+.beers-detail{
+  background-color: $secondary-background !important;
+  padding: 10px 10px 50px 10px !important;
+  margin: 0px !important;
+  border-bottom: 1px solid rgb(242, 242, 242);
+  height: 200px;
+  width: 200px;
+  font-size: 100px;
 }
